@startuml
'https://plantuml.com/class-diagram

class Proyecto{
    - nombre_proyecto: String
}

class Tarea{
    - nombre_tarea: String
    - fecha_inicial: Date
    - fecha_limite: Date
    - esta_completado:  boolean
}

class Estado{
    - nombre_estado: String
    - color_estado: String
}

class ProyectoTareasController{
    + tiene_tareas(): boolean
}

Proyecto o-- "*" Tarea
ProyectoTareasController ..> Tarea
ProyectoTareasController --> Proyecto
@enduml